# sprout_amp

./: .gitignore  CMakeLists.txt  README.md  crossbuild_win.sh
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
test/: CMakeLists.txt
